tests/single_instruction_translation_validation/mcsema/register-variants/phaddd_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:197:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %19)
            ^
0.02user 0.00system 0:00.03elapsed 106%CPU (0avgtext+0avgdata 27608maxresident)k
0inputs+16outputs (0major+3244minor)pagefaults 0swaps
